--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,89 @@
-/*# sourceMappingURL=styles.css.map */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  list-style: none;
+  text-decoration: none;
+}
+
+:root {
+  --main-color: rgb(240, 240, 240);
+  --second-color: rgb(92, 236, 193);
+  --transition: all 0.3s ease-in-out;
+}
+
+body {
+  background-color: var(--main-color);
+}
+
+header {
+  z-index: 1111;
+  padding: 20px 16%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 100%;
+  background: white;
+  transition: var(--transition);
+}
+header .logo {
+  font-size: 1.7rem;
+  color: black;
+  font-weight: 600;
+  transition: var(--transition);
+}
+header .logo:hover {
+  color: var(--second-color);
+  transform: translateX(-5px);
+}
+header .nav {
+  display: flex;
+  margin: 0 3px;
+}
+header .nav li {
+  padding: 10px 20px;
+}
+header .nav li a {
+  color: black;
+  padding: 10px 25px;
+  transition: var(--transition);
+  border-radius: 1rem;
+}
+header .nav li a:hover {
+  background-color: var(--second-color);
+}
+
+section {
+  padding: 100px 16% 70px;
+}
+
+.main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+  background-image: url(/img/topographic-textures.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.main .main-text {
+  font-size: 4.5rem;
+  padding: 40px;
+  border-radius: 2rem;
+  background-color: rgb(251, 251, 251);
+  text-transform: capitalize;
+}
+.main .main-text .bordered-text {
+  color: transparent;
+  -webkit-text-stroke: 4px var(--second-color);
+}
+
+header.sticky {
+  padding: 10px 16%;
+  background-color: var(--second-color);
+}/*# sourceMappingURL=styles.css.map */
